--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "click-tracker-nextjs": "file:",
     "crypto": "^1.0.1",
     "mongoose": "^7.6.0",
     "next": "^13.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-datepicker": "^4.8.0",
-    "react-csv": "^2.2.2"
+    "react-dom": "^18.2.0"
   }
 }
