--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "chart.js": "^4.4.8",
     "click-tracker-nextjs": "file:",
     "mongoose": "^7.6.0",
     "next": "^13.4.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-csv": "^2.2.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0"
